日付バリデーションを追加 その他のバリデーションのエラーメッセージを日本語でカスタマイズ

--- a/AtlasCompass_KentaNakamura/public/css/style.css
+++ b/AtlasCompass_KentaNakamura/public/css/style.css
@@ -37,9 +37,12 @@ li {
   vertical-align: middle;
 }
 
-.error_message {
-  color: red;
+.error-message {
   font-size: 12px;
+}
+
+.space {
+  height: 16px;
 }
 
 /* サイドバー */
