カテゴリー追加の修正 サブカテゴリーを、それに紐づくメインカテゴリーごとに表示させる

--- a/AtlasCompass_KentaNakamura/public/css/style.css
+++ b/AtlasCompass_KentaNakamura/public/css/style.css
@@ -143,7 +143,8 @@ li {
 
 /* 掲示板 */
 .sub_categories {
-  display: none;
+  /* display: none; */
+  display: inline-block;
 }
 
 .post_create_area {
