--- a/AtlasCompass_KentaNakamura/public/css/reset.css
+++ b/AtlasCompass_KentaNakamura/public/css/reset.css
@@ -91,7 +91,7 @@ video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
-	text-decoration: none;
+	text-decoration: none !important;
 	;
 }
 
