投稿詳細画面、コメントの調整

--- a/AtlasCompass_KentaNakamura/public/css/style.css
+++ b/AtlasCompass_KentaNakamura/public/css/style.css
@@ -164,6 +164,7 @@ li {
 
 .detail_container {
   background: #FFF;
+  border-radius: 10px;
 }
 
 .post_area {
@@ -214,17 +215,15 @@ li {
 
 /* 掲示板 詳細画面 */
 .contributor {
-  font-size: 12px;
   color: #999;
-  font-weight: bold;
+  font-weight: 700;
 }
 
-.detsail_post_title {
-  font-size: 14px;
+.detail_post_title {
+  font-weight: 700;
 }
 
-.detsail_post {
-  font-size: 12px;
+.detail_post {
   color: #9E9E9E;
 }
 
@@ -249,6 +248,7 @@ li {
 /* 掲示板 コメント */
 .comment_container {
   background: #FFF;
+  border-radius: 10px;
 }
 
 .comment_area p,
