--- a/AtlasCompass_KentaNakamura/public/css/style.css
+++ b/AtlasCompass_KentaNakamura/public/css/style.css
@@ -385,14 +385,18 @@ li {
 }
 
 .subject_edit_btn {
-  font-size: 12px;
-  color: #0000FF;
-  cursor: pointer;
+  color: #03AAD2 !important;
+  cursor: pointer !important;
 }
 
-.subject_inner {
-  display: none;
+.subject_edit_btn::after {
+  background-image: url('../image/accordion_arrow_2.svg') !important;
+  margin-left: 0.2rem !important;
 }
+
+/* .subject_inner {
+  display: none;
+} */
 
 /* アコーディオン */
 .accordion-item {
@@ -407,19 +411,22 @@ li {
 
 .accordion-button {
   background-color: transparent !important;
-  color: #212529 !important;
   border: none !important;
   box-shadow: none !important;
   padding: 1.5rem 0.25rem 0.3rem 0 !important;
 }
 
-.accordion-button::after {
+.category_sort_btn {
+  color: #212529 !important;
+}
+
+.category_sort_btn::after {
   background-image: url('../image/accordion_arrow.svg') !important;
   transform: rotate(0deg) !important;
   transition: transform 0.3s !important;
 }
 
-.accordion-button:not(.collapsed)::after {
+.category_sort_btn:not(.collapsed)::after {
   transform: rotate(180deg) !important;
 }
 
